# std_e

./:  .gitlab-ci.yml  .gitignore  .gitlab-ci.yml  .gitmodules  .nfs0000000015e20292000019ae  AUTHORS.md  CMakeLists.txt  LICENSE.md  README.md  compile_commands.json  constexpr_max_sizes.hpp  graph.dg  std_e.dg
.github/workflows/: c-cpp.yml
.gitlab/issue_templates/: Bug.md
adjacency_graph/: build_adjacency_graph.hpp  build_tree.hpp  factorize_io_graph.hpp  io_adjacency.hpp  io_graph.hpp  io_graph_rearranging.hpp  io_graph_to_dot_string.hpp  merge_from_leaves.hpp
adjacency_graph/test/: build_id_graph.test.cpp  io_adjacency.test.cpp  io_graph.test.cpp  io_graph_rearranging.test.cpp  tree_to_io_graph.test.cpp
algorithm/: algo_adjacencies.hpp  algo_base.hpp  algo_nodes.hpp  for_each.hpp  iota.hpp  iterator.hpp  numerics.hpp  permutation.hpp  record.hpp  reduction.hpp
algorithm/test/: algo_base.test.cpp  algorithm.test.cpp  for_each.test.cpp  iota.test.cpp  iterator.test.cpp  numerics.test.cpp  permutation.test.cpp  record.test.cpp  reduction.test.cpp
base/: dynamic_size.hpp  inline_for.hpp  macros.hpp  size.hpp
base/test/: inline_for.test.cpp  var_arg_reduction.test.cpp
data_structure/: heterogenous_vector.hpp  hierarchical_zip.hpp
data_structure/test/: heterogenous_vector.test.cpp  hierarchical_zip.test.cpp  hierarchical_zip_and_hvector.test.cpp
doc/: Doxyfile.in  conf.py.in  development.rst  highlights.rst  index.rst  installation.rst  quick_start.rst  source_generated_documentation.rst  todo.rst  ~$simple_graph_class_diag.pptx
doc/_static/: my-style.css  my-style.css.almost  my-style.css.works_fine  my-style_works.css
doc/design_documents/: aliases_vs_inheritance_vs_strong_typing.rst  design_documents.rst  development.rst  graphs.rst  graphs.rst.sav  md_array_dim_type.rst  member_init_list.rst  mesh.rst  multi_dimensional_arrays.rst  permutation.rst  serialization.rst  static_inheritance_trick.rst  value_reference_and_view_types.md  why_no_interval_type.rst
doc/highlights/: highlights.rst  hvector.rst  introduction.rst  multi_array.rst  str_enum.rst
doc/images/: simple_graph_class_diag.pptx
doc/reference/: pivot_partition.rst  pivot_partition_range.rst  pivot_partitions.rst  reference.rst
doc/releases/: release_notes.rst  v0.1.0.rst
doc/user_manual/: blocks.rst  data_structure.rst  execution.rst  folders.rst  graph.rst  graph.rst.sav  interval.rst  introduction.rst  jagged_array.rst  lift.rst  log.rst  multi_dimensional_arrays.rst  operation.rst  overload_set.rst  switch.rst  undocumented.rst  user_manual.rst
docs/: Doxyfile.in  conf.py.in  contents.rst  design_documents.rst  index.rst  installation.rst  license.rst  quick-start.rst  quick_start.rst  release_notes.rst  source_generated_documentation.rst  tutorial.rst
docs/_static/: function.css  my-style.css
docs/code-reference/: data_structure.rst
docs/design_documents/: multi_dimensional_arrays.md  value_reference_and_view_types.md
docs/releases/: v0.1.0.txt
docs/user_manual/: algorithm.rst  classes-and-functions.rst
examples/: decorator.cpp  doctest_subcase.test.cpp  inherit_static_trick.test.cpp  quick_sort.hpp
future/: algorithm.hpp  constexpr_quick_sort.hpp  constexpr_vector.hpp  contract.hpp  reference_wrapper.hpp  span.hpp
future/test/: span.test.cpp
graph/: concept.hpp
graph/adjacency_graph/: io_adjacency.hpp  io_graph.hpp
graph/algorithm/: algo_base.hpp  algo_nodes.hpp  algorithm.hpp  reduction.hpp
graph/test/: doctest_utils.hpp  io_graph.hpp  main_unit_tests.test.cpp  nested_tree.hpp
graph/tree/: nested_tree.hpp
memory_ressource/: concept.hpp  memory_ressource_provider.hpp
multi_array/: multi_array.hpp
multi_array/multi_array/: multi_array.hpp  multi_array_permuted_view.hpp  multi_labels_array.hpp
multi_array/shape/: concept.hpp  dyn_rank_shape.hpp  dyn_shape.hpp  fixed_dyn_shape_common.hpp  fixed_shape.hpp  std_e__multi_array__shape.dg
multi_array/test/: utils.test.cpp
multi_index/: concept.hpp  cx_multi_index.hpp  fortran_order.hpp  multi_index.hpp  multi_index_range.hpp
multi_index/test/: cartesian_product.test.cpp  fortran_order.test.cpp  multi_index_utils.test.cpp
operation/: operation_functor.hpp  operation_kind.hpp
operation/test/: operation_functor.test.cpp
scripts/: clean.sh  install.sh
scripts/cmake/: add_extern_package.cmake  target_add_dependency.cmake
std_e/: cat.hpp  debug.hpp  debug_par.hpp  log.hpp  plog.hpp  std_e.dg
std_e/__attempt/: reference_range.hpp
std_e/__perf_test/: iter_kind_0.hpp  iter_kind_1.hpp
std_e/__unused/: index_iterator.hpp  iter_kind_0.hpp  iter_kind_1.hpp
std_e/algorithm/: algorithm.h  algorithm.hpp  block.hpp  concatenate.hpp  distribution.hpp  for_each.hpp  id_permutations.hpp  interval.hpp  iota.hpp  iterator.hpp  merge_twin_copy.hpp  mismatch_points.hpp  numeric.hpp  numerics.h  overlapping.hpp  partition_3way.hpp  partition_sort.hpp  permutation.hpp  pivot_partition.hpp  pivot_partition_eq_range.hpp  pivot_partition_range.hpp  pivot_partitions.hpp  sort.hpp  sort_base.hpp  sorting_networks.hpp  step.hpp  unique.hpp  unique_compress.hpp
std_e/algorithm_old/: algorithm.hpp  id_permutations.hpp
std_e/base/: array.hpp  assertion_failure.hpp  concept.h  dynamic_size.hpp  index_t.h  index_t.hpp  inline_for.hpp  lift.hpp  macros.hpp  memory_view.h  memory_view.hpp  msg_exception.hpp  not_implemented_exception.hpp  overload_set.hpp  size.hpp  stacktrace_to_string.cpp  stacktrace_to_string.hpp  template_alias.hpp  var_arg_reduction.h  var_arg_reduction.hpp
std_e/buffer/: allocator.hpp  base.hpp  buffer.hpp  buffer_span.hpp  buffer_vector.hpp  buffer_view.hpp  owning_buffer.hpp  (+3 more)
test/: CMakeLists.txt  doctest_utils.hpp  io_graph.hpp  nested_tree.hpp  utils.hpp
tree/: nested_tree.hpp  nested_tree_algorithm_examples.hpp
utils/: array.hpp  array_iterator.hpp  array_vector_common.hpp  concatenate.hpp  dereferencing_range.hpp  frozen_flat_map.hpp  functional.hpp  index_iterator.hpp  integer_range.hpp  meta.hpp  str_enum.hpp  string.hpp  to_string.hpp  tuple.hpp  type_traits.hpp  vector.hpp
(+661 files in other folders)
